--- a/index.html
+++ b/index.html
@@ -6,69 +6,90 @@
   <title>小工具🛠️</title>
   <style>
     body {
+      background-color: #fdf6ee; /* 奶茶底 */
+      font-family: "Microsoft JhengHei", sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4e9dc;
-      font-family: "Microsoft JhengHei", sans-serif;
-      font-weight: bold;
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
 
     .container {
-      width: 50%;
-      background-color: #fffaf2;
-      border-radius: 16px;
-      box-shadow: 0 0 18px rgba(0,0,0,0.08);
-      padding: 40px 30px;
-      box-sizing: border-box;
+      width: 40%;
+      margin-top: 40px;
+      background-color: #fff8f0;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
     }
 
     h2 {
-      font-size: 26px;
-      color: #5c3a1e;
-      margin-bottom: 30px;
+      font-size: 24px;
+      font-weight: bold;
+      color: #5d3e2e;
+      margin-bottom: 24px;
     }
 
     label {
-      font-size: 18px;
       display: block;
       margin-top: 20px;
-      color: #3e2d20;
-    }
-
-    input, select {
-      width: 90%;
-      padding: 12px;
-      font-size: 16px;
-      border: 1.5px solid #cbb195;
-      border-radius: 8px;
-      margin-top: 6px;
-      text-align: center;
       font-weight: bold;
-      background-color: #fdf6ee;
-      color: #5c3a1e;
+      font-size: 18px;
+      color: #5d3e2e;
     }
 
-    button {
+    input[type="text"] {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #d3bfa8;
+      border-radius: 6px;
+      text-align: center;
+      margin-top: 8px;
+      font-weight: bold;
+    }
+
+    .btn-group {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 10px;
+    }
+
+    .btn-group button {
+      flex: 1;
+      margin: 0 5px;
+      padding: 10px 0;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      background-color: #e2c9b3;
+      color: #4b2e1d;
+      transition: background-color 0.3s ease;
+    }
+
+    .btn-group button.active {
+      background-color: #c2a48f;
+    }
+
+    #generate {
       margin-top: 36px;
+      width: 100%;
       padding: 12px;
-      width: 90%;
       font-size: 18px;
       font-weight: bold;
-      color: white;
-      background-color: #b88a62;
+      background-color: #b08968;
+      color: #fff;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
 
-    button:hover {
-      background-color: #a07555;
+    #generate:hover {
+      background-color: #8d6a4a;
     }
   </style>
 </head>
@@ -76,99 +97,105 @@
   <div class="container">
     <h2>小工具🛠️</h2>
 
-    <label for="store">門市代碼</label>
-    <input type="text" id="store" maxlength="3" placeholder="">
+    <label>門市代碼</label>
+    <input type="text" id="store" maxlength="3" placeholder="請輸入3碼門市代碼" />
 
-    <label for="meal">用餐方式</label>
-    <select id="meal" onchange="lockOrderTypeIfDelivery()">
-      <option value="1">內用</option>
-      <option value="2">外帶</option>
-      <option value="4">外送</option>
-    </select>
+    <label>用餐方式</label>
+    <div class="btn-group" id="mealType">
+      <button onclick="selectBtn(this, 'meal')" data-value="1">內用</button>
+      <button onclick="selectBtn(this, 'meal')" data-value="2">外帶</button>
+      <button onclick="selectBtn(this, 'meal')" data-value="4">外送</button>
+    </div>
 
-    <label for="order">點餐方式</label>
-    <select id="order">
-      <option value="3">點餐機</option>
-      <option value="1">櫃檯</option>
-      <option value="2">網訂</option>
-    </select>
+    <label>點餐方式</label>
+    <div class="btn-group" id="orderType">
+      <button onclick="selectBtn(this, 'order')" data-value="3">點餐機</button>
+      <button onclick="selectBtn(this, 'order')" data-value="2">櫃檯</button>
+      <button onclick="selectBtn(this, 'order')" data-value="4">網訂</button>
+    </div>
 
-    <button onclick="generateAndCopy()">🚀 產生並複製問卷連結</button>
+    <button id="generate" onclick="generate()">一鍵產生問卷連結</button>
   </div>
 
   <script>
-    const safeDeliveryCodes = [
-      "10050001", "14480005", "13350004",
-      "12230003", "18600010", "19451102",
-      "14720006", "17730005"
-    ];
-    const safeNormalCodes = [
-      "11050802", "12151302", "11515203",
-      "12251601", "12110803", "11410402",
-      "15494902", "13543603", "11420101",
-      "12330103"
-    ];
+    let mealValue = "";
+    let orderValue = "";
 
-    function lockOrderTypeIfDelivery() {
-      const meal = document.getElementById('meal').value;
-      const order = document.getElementById('order');
-      if (meal === "4") {
-        order.value = "2";
-        order.disabled = true;
+    const externalTailCodes = ["10050001", "14480005", "13350004"]; // 外送安全尾碼池
+    const normalTailCodes = ["0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010", "0030", "0011", "0020", "0022", "0033"]; // 正常安全尾碼池
+
+    function selectBtn(button, type) {
+      const group = type === 'meal' ? document.getElementById('mealType') : document.getElementById('orderType');
+      const buttons = group.querySelectorAll('button');
+      buttons.forEach(btn => btn.classList.remove('active'));
+      button.classList.add('active');
+
+      if (type === 'meal') {
+        mealValue = button.dataset.value;
+        if (mealValue === "4") {
+          // 外送自動綁定網訂
+          const orderButtons = document.getElementById('orderType').querySelectorAll('button');
+          orderButtons.forEach(btn => {
+            btn.classList.remove('active');
+            if (btn.dataset.value === "4") {
+              btn.classList.add('active');
+              orderValue = "4";
+            }
+          });
+        }
       } else {
-        order.disabled = false;
+        orderValue = button.dataset.value;
       }
     }
 
-    function generateAndCopy() {
-      const store = document.getElementById('store').value.trim();
-      const meal = document.getElementById('meal').value;
-      const order = document.getElementById('order').value;
-      const k = "2";
-      const m = "4";
-
+    function generate() {
+      const store = document.getElementById("store").value.trim();
       if (!store || store.length !== 3 || isNaN(store)) {
-        alert("請輸入有效的 3 碼門市代碼");
+        alert("請輸入有效的3碼門市代碼");
+        return;
+      }
+      if (!mealValue || !orderValue) {
+        alert("請選擇用餐與點餐方式");
         return;
       }
 
       const prefix = store.startsWith("5") ? "TWB" : "TWI";
       const now = new Date();
-      const date = new Date(now.getFullYear(), now.getMonth(), now.getDate());
-      const d = date.toISOString().slice(0, 10).replace(/-/g, '');
+      const date = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1);
+      const d = date.toISOString().slice(0, 10).replace(/-/g, "");
 
-      let s, rand1, rand2, rand3;
-      if (meal === "4") {
-        [s, rand1, rand2, rand3] = safeDeliveryCodes[Math.floor(Math.random() * safeDeliveryCodes.length)].match(/(\d{2})(\d{2})(\d{2})(\d{2})/).slice(1);
+      const s = String(Math.floor(Math.random() * (22 - 10 + 1)) + 10).padStart(2, '0');
+      const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
+
+      let tail = "";
+      if (mealValue === "4") {
+        // 外送固定尾碼池
+        tail = externalTailCodes[Math.floor(Math.random() * externalTailCodes.length)];
       } else {
+        // 正常混合尾碼
         const useSafe = Math.random() < 0.6;
         if (useSafe) {
-          [s, rand1, rand2, rand3] = safeNormalCodes[Math.floor(Math.random() * safeNormalCodes.length)].match(/(\d{2})(\d{2})(\d{2})(\d{2})/).slice(1);
+          tail = normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)];
         } else {
-          s = String(Math.floor(Math.random() * (22 - 10 + 1)) + 10).padStart(2, '0');
-          rand1 = String(Math.floor(Math.random() * 90) + 10);
-          rand2 = String(Math.floor(Math.random() * 50) + 10);
-          rand3 = String(Math.floor(Math.random() * 89) + 11);
+          tail = String(Math.floor(10000000 + Math.random() * 89999999));
         }
       }
 
-      const u = `${prefix}${store}${d}${s}${rand1}${rand2}${rand3}`;
-      const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
+      const u = `${prefix}${store}${d}${tail}`;
       const obj = {
         S: `886K${prefix}${store}`,
         U: u,
         D: d,
         T: t,
         Country: "TW",
-        O: order,
-        M: m,
-        K: k
+        O: orderValue,
+        M: "4",
+        K: mealValue
       };
-
       const base64 = btoa(JSON.stringify(obj));
       const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${base64}`;
       navigator.clipboard.writeText(link).then(() => {
-        alert("問卷連結已複製成功！");
+        alert("已複製成功");
       });
     }
   </script>
