--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <h2>小工具🛠️</h2>
 
     <label>門市代碼</label>
-    <input type="text" id="store" maxlength="3" placeholder="請輸入3碼門市代碼" />
+    <input type="text" id="store" maxlength="3" placeholder="請輸入門市代碼" />
 
     <label>用餐方式</label>
     <div class="btn-group" id="mealType">
@@ -123,7 +123,7 @@
       <button onclick="selectBtn(this, 'order')" data-value="4" id="web">網訂</button>
     </div>
 
-    <button id="generate" onclick="generate()">🚀 一鍵產生問卷連結</button>
+    <button id="generate" onclick="generate()">🚀 一鍵複製連結</button>
   </div>
 
   <script>
@@ -172,7 +172,7 @@
     function generate() {
       const store = document.getElementById("store").value.trim();
       if (!store || store.length !== 3 || isNaN(store)) {
-        alert("請輸入有效的3碼門市代碼");
+        alert("請輸入有效門市代碼");
         return;
       }
       if (!mealValue || !orderValue) {
