--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <button onclick="selectBtn(this, 'order')" data-value="4" id="web">網訂</button>
     </div>
 
-    <button id="generate" onclick="generate()">🚀 一鍵複製連結</button>
+    <button id="generate" onclick="generate()">🚀 連結一鍵生成並複製</button>
   </div>
 
   <script>
