--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <h2>小工具🛠️</h2>
 
     <label>門市代碼</label>
-    <input type="text" id="store" maxlength="3" placeholder="請輸入門市代碼" />
+    <input type="text" id="store" maxlength="3" placeholder="請輸入" />
 
     <label>用餐方式</label>
     <div class="btn-group" id="mealType">
